# TinyParser-Mitsuba

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md
.github/workflows/: build.yml
cmake/: Coverage.cmake  Documentation.cmake  GetDependencies.cmake  SetupCPM.cmake  check_submodules.cmake  setup_install.cmake  setup_package.cmake
csharp/: TinyParserMitsuba.sln
csharp/TinyParserMitsuba/: Lib.cs  Property.cs  Scene.cs  SceneLoader.cs  SceneObject.cs  TinyParserMitsuba.csproj
csharp/TinyParserMitsuba.Tests/: Integration.cs  TinyParserMitsuba.Tests.csproj
include/: tinyparser-mitsuba-c.h  tinyparser-mitsuba.h
src/: dump.cpp  tinyparser-mitsuba-c.cpp  tinyparser-mitsuba.cpp
src/tests/: CMakeLists.txt  integrity.cpp  property.cpp  transform.cpp
src/wrapper/cli/: wrapper.cpp  wrapper.h
src/wrapper/csharp/: Blackbody.cs  Enums.cs  Lib.cs  Scene.cs  SceneLoader.cs  Spectrum.cs  TinyParserMitsuba.csproj  TinyParserMitsuba.sln
